# dotselect

./: README.md  pyproject.toml
src/dotpath/: cli.py  core.py
